//  Copyright (c) 2018 Minoru Osuka
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 		http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package blast;

option go_package = "protobuf";

import "protobuf/message.proto";
import "google/protobuf/empty.proto";

service Index {
    rpc PutDocument(blast.PutDocumentRequest) returns (google.protobuf.Empty) {}
    rpc GetDocument(blast.GetDocumentRequest) returns (blast.GetDocumentResponse) {}
    rpc DeleteDocument(blast.DeleteDocumentRequest) returns (google.protobuf.Empty) {}
    rpc Bulk(blast.BulkRequest) returns (blast.BulkResponse) {}
    rpc Search(blast.SearchRequest) returns (blast.SearchResponse) {}

    rpc GetIndexMapping (google.protobuf.Empty) returns (blast.GetIndexMappingResponse) {}
    rpc GetIndexMeta (google.protobuf.Empty) returns (blast.GetIndexMetaResponse) {}
}
